alternative way of fixing overflow

--- a/src/Projects/Project.css
+++ b/src/Projects/Project.css
@@ -1,8 +1,3 @@
-.banner {
-    max-width: 100%; /* dynamic, keep shrinking to match the width of its containing div */
-    border-radius: 10px;
-}
-
 .project-title {
     margin-top: 30px;
     color: #000; font-family: 'Helvetica Neue', sans-serif; font-size: 5vw; font-weight: bold; letter-spacing: -1px; line-height: 1; text-align: center;
